--- a/client/src/app.css
+++ b/client/src/app.css
@@ -4,10 +4,12 @@ body {
     background-color: #f4f4f4;
 }
 
+/*--- navbar styling ---*/
 .nav-list {
     margin-top: 0;
     list-style-type: none;
     background-color: #AFF4C6;
+    padding: 5px;
 }
 
 .nav-container {
@@ -17,10 +19,6 @@ body {
 
 .nav-flex {
     margin-left: 30px;
-}
-  
-.nav-title {
-    margin-left: -30px;
 }
   
 .nav-item {
@@ -35,6 +33,67 @@ body {
     background-color: #dcffe7;
 }
 
+/*--- Login/register styling ---*/
+.form-container {
+  text-align: center;
+}
+
+.login-container {
+  background-color: #AFF4C6;
+}
+
+.inner-form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.login-title {
+  margin-top: 110px;
+}
+
+.input-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.form-label {
+  margin-bottom: 10px;
+}
+
+.input-field {
+  width: 300px;
+  height: 35px;
+}
+
+.form-submit-button {
+  border: none;
+  background-color: #AFBBF4;
+  padding: 8px;
+  width: 310px;
+  border-radius: 25px;
+  cursor: pointer;
+  transition: 0.4s ease;
+  font-size: medium;
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+
+.form-submit-button:hover {
+  background-color: #c9d1fb;
+}
+
+.form-bold-link {
+  text-decoration: none;
+  color: black;
+  transition: 0.4s ease;
+}
+
+.form-bold-link:hover {
+  text-decoration: underline;
+}
 /*--- dashboard to do styling ---*/
 /* to do styling */
 .todo-container {
