--- a/client/src/app.css
+++ b/client/src/app.css
@@ -33,6 +33,18 @@ body {
     background-color: #dcffe7;
 }
 
+.logout-button {
+    text-decoration: none;
+    color: black;
+    transition: 0.4s ease;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.logout-button:hover {
+  background-color: #dcffe7;
+}
+
 /*--- Login/register styling ---*/
 .form-container {
   text-align: center;
