--- a/client/src/app.css
+++ b/client/src/app.css
@@ -177,6 +177,16 @@ body {
     cursor: pointer;
   }
 
+  .view-all-button {
+    text-decoration: none;
+    color: black;
+    transition: 0.4s ease;
+  }
+
+  .view-all-button:hover {
+    text-decoration: underline;
+  }
+
 .gratitude-container {
     margin: 20px;
     padding-top: 10px;
