--- a/client/src/app.css
+++ b/client/src/app.css
@@ -188,6 +188,8 @@ body {
   }
 
 .gratitude-container {
+    display: flex;
+    flex-direction: column;
     margin: 20px;
     padding-top: 10px;
     padding-left: 30px;
@@ -195,6 +197,18 @@ body {
     background-color: white;
     width: 45%;
 }
+
+.gratitude-flex {
+  display: flex;
+  justify-content: space-between; 
+}
+
+.plus-icon {
+  align-self: center;
+  margin-right: 30px;
+  font-size: large;
+}
+
 
 .affirmation-container{
     margin: 20px;
@@ -215,4 +229,62 @@ body {
   padding: 1px 40px 1px 40px;
   border-radius: 5px;
   line-height: 0.6;
+}
+
+/*temp grat form*/
+.form-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.form-container {
+  width: 300px;
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.form-container h2 {
+  margin-bottom: 20px;
+}
+
+.form-container form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-container label {
+  margin-bottom: 10px;
+}
+
+.form-container input {
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.form-container button {
+  padding: 8px 16px;
+  border: none;
+  border-radius: 4px;
+  background-color: #007bff;
+  color: white;
+  cursor: pointer;
+}
+
+.form-container button:hover {
+  background-color: #0056b3;
 }
