--- a/client/src/app.css
+++ b/client/src/app.css
@@ -232,7 +232,7 @@ body {
 }
 
 /*temp grat form*/
-.form-overlay {
+.grat-form-overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -245,7 +245,7 @@ body {
   z-index: 999;
 }
 
-.form-container {
+.grat-form-container {
   width: 300px;
   background-color: white;
   padding: 20px;
@@ -254,21 +254,21 @@ body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.form-container h2 {
+.grat-form-container h2 {
   margin-bottom: 20px;
 }
 
-.form-container form {
+.grat-form-container form {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.form-container label {
+.grat-form-container label {
   margin-bottom: 10px;
 }
 
-.form-container input {
+.grat-form-container input {
   width: 100%;
   margin-bottom: 10px;
   padding: 8px;
@@ -276,7 +276,7 @@ body {
   border-radius: 4px;
 }
 
-.form-container button {
+.grat-form-container button {
   padding: 8px 16px;
   border: none;
   border-radius: 4px;
@@ -285,6 +285,10 @@ body {
   cursor: pointer;
 }
 
-.form-container button:hover {
+.grat-form-container button:hover {
   background-color: #0056b3;
+}
+
+.gratitude-item {
+  margin-top: -3px;
 }
