--- a/client/src/app.css
+++ b/client/src/app.css
@@ -235,6 +235,16 @@ body {
   background-color: white;
 }
 
+.checkin-container {
+  margin-bottom: 20px;
+  padding: 10px;
+  background-color: white;
+}
+
+.moodbuttons-container {
+  margin-bottom: 20px;
+}
+
 /* date styling */
 .date-container {
   text-align: center;
