--- a/client/src/app.css
+++ b/client/src/app.css
@@ -348,48 +348,147 @@ body {
 }
 
 .grat-form-container {
-  width: 300px;
+  width: 450px;
   background-color: white;
   padding: 20px;
   border-radius: 8px;
-  text-align: center;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: stretch; /* Ensures that child elements like form will expand to full width */
 }
 
 .grat-form-container h2 {
-  margin-bottom: 20px;
+  text-align: center; /* Centers the text inside the h2 */
+  margin-bottom: 30px;
 }
 
 .grat-form-container form {
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .grat-form-container label {
-  margin-bottom: 10px;
+  margin-bottom: 0px;
 }
 
 .grat-form-container input {
-  width: 100%;
-  margin-bottom: 10px;
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  width: 98.5%;
+  padding: 2px;
+  border: 1px solid black;
+  border-radius: 5px;
 }
 
-.grat-form-container button {
-  padding: 8px 16px;
+.grat-close-button {
+  align-self: flex-start;
+  padding: 8px 12px;
   border: none;
   border-radius: 4px;
-  background-color: #007bff;
-  color: white;
+  background-color: white;
+  cursor: pointer;
+  transition: 0.4s ease;
+  margin-left: -5px;
+  margin-top: -5px;
+}
+
+.grat-submit-button {
+  margin-top: -2px;
+  margin-bottom: 30px;
+  border: none;
+  border-radius: 25px;
+  padding: 7px;
+  background-color: #AFBBF4;
+  transition: 0.4s ease;
   cursor: pointer;
 }
 
-.grat-form-container button:hover {
-  background-color: #0056b3;
+.grat-submit-button:hover {
+  background-color: #c8cfef;
 }
+
+.grat-close-button:hover {
+  background-color: #e2e1e1;
+}
+
+.gratitude-item {
+  margin-top: -3px;
+}
+
+/*temp check-in form*/
+.checkin-form-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.checkin-form-container {
+  width: 450px;
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: stretch; /* Ensures that child elements like form will expand to full width */
+}
+
+.checkin-form-container h2 {
+  text-align: center; /* Centers the text inside the h2 */
+  margin-bottom: 30px;
+}
+
+.checkin-form-container form {
+  display: flex;
+  flex-direction: column;
+}
+
+.checkin-form-container label {
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+
+.checkin-form-container select {
+  width: 100%;                 
+  padding: 8px 10px;              
+  border: 1px solid black;       
+  border-radius: 4px;           
+  background-color: white;        
+  color: #333;                    
+  cursor: pointer;                 
+  outline: none;   
+  margin-bottom: 5px;        
+}
+
+.checkin-submit-button {
+  margin-top: 13px;
+  margin-bottom: 30px;
+  border: none;
+  border-radius: 25px;
+  padding: 7px;
+  background-color: #AFBBF4;
+  transition: 0.4s ease;
+  cursor: pointer;
+}
+
+.checkin-submit-button:hover {
+  background-color: #c8cfef;
+}
+
+.moodbuttons-container {
+  display: flex;            
+  justify-content: center;  
+  align-items: center;         
+  flex-wrap: wrap;   
+  margin: 10px 0;       
+}
+
 
 .gratitude-item {
   margin-top: -3px;
