--- a/client/src/app.css
+++ b/client/src/app.css
@@ -126,7 +126,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 5px;
-    width: 100%;
+    width: 99%;
     margin-top: 5px;
     margin-right: 5px;
     margin-bottom: 5px;
@@ -253,6 +253,16 @@ body {
 .timer-flex {
   display: flex;
   justify-content: space-between; 
+}
+
+.timer-flex select {
+  border-radius: 5px;
+  padding: 8px 10px;              
+  border: 1px solid black;
+}
+
+.timer-flex h3 {
+  margin-left: 10px;
 }
 
 .timer-time {
@@ -412,6 +422,11 @@ body {
 
 .gratitude-item {
   margin-top: -3px;
+  margin-left: 10px;
+}
+
+.gratitude-flex h3 {
+  margin-left: 10px;
 }
 
 /*temp check-in form*/
@@ -492,6 +507,7 @@ body {
 
 .checkin-text {
   margin-top: -3px;
+  margin-left: 10px;
 }
 
 /*temp affirmation form*/
@@ -517,6 +533,7 @@ body {
   flex-direction: column; /* Ensure vertical stacking */
   align-items: center;
   width: 400px;
+  height: 230px;
 }
 
 .affirmation-form-container h2 {
@@ -591,6 +608,114 @@ body {
   background-color: #c9d1fb;
 }
 
+.affirmations-close {
+  position: absolute; /* Position the button absolutely */
+  bottom: 20px; /* Adjust the distance from the bottom as needed */
+  left: 50%; /* Move the button to the center horizontally */
+  transform: translateX(-50%); /* Adjust horizontally to center */
+  background-color: #AFBBF4;
+  border: none;
+  transition: 0.4s ease;
+  border-radius: 25px;
+  padding: 7px;
+  padding-left: 12px;
+  padding-right: 12px;
+  cursor: pointer;
+}
+
+.affirmations-close:hover {
+  background-color: #c9d1fb;
+}
+
 .affirmation-text {
   margin-top: -3px;
+  margin-left: 10px;
+}
+
+/*temp goal form*/
+.goals-container h3 {
+  margin-left: 10px;
+}
+
+.goals-container ul {
+  list-style: none;
+  margin-left: -30px;
+  height: 90px;
+  overflow-y: auto;
+}
+
+.goals-container li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  padding: 5px;
+  width: 97%;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  border-radius: 5px;
+  overflow-y: auto;
+}
+
+.goals-container li:hover {
+  background-color: #f4f4f4;
+}
+
+.goal-form-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.goal-form-container {
+  position: relative;
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  flex-direction: column; /* Ensure vertical stacking */
+  align-items: center;
+  width: 400px;
+  height: 230px;
+}
+
+.goal-form-container h2 {
+  text-align: center; 
+  margin-bottom: 30px;
+}
+
+.goal-form-container p {
+  text-align: center; 
+  margin-bottom: 30px;
+}
+
+.goal-form-container form {
+  display: flex;
+  flex-direction: column;
+}
+
+.goal-repetitions {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: space-between;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+.goal-text {
+  margin-top: -3px;
+  margin-left: 10px;
 }
