--- a/client/src/app.css
+++ b/client/src/app.css
@@ -680,15 +680,64 @@ body {
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  flex-direction: column; /* Ensure vertical stacking */
+  flex-direction: column;
+  align-items: center;
+  width: 400px;
+  height: 320px;
+}
+
+.single-goal-form-container {
+  position: relative;
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  flex-direction: column;
   align-items: center;
   width: 400px;
   height: 230px;
 }
 
+.single-goal-form-container h2 {
+  text-align: center; 
+  margin-bottom: 20px;
+}
+
+.goal-complete-button {
+  text-align: right;
+}
+
+.completed-goal-container {
+  position: relative;
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  flex-direction: column;
+  align-items: center;
+  width: 400px;
+  height: 380px;
+}
+
+.completed-goal-container h2 {
+  text-align: center; 
+  margin-bottom: 20px;
+}
+
+.completed-goal-container ul {
+  height: 240px;
+  overflow-y: auto;
+}
+
+.completed-goal-container li {
+  list-style: none;
+  margin-left: -20px;
+  margin-bottom: 10px;
+}
+
 .goal-form-container h2 {
   text-align: center; 
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .goal-form-container p {
@@ -701,21 +750,38 @@ body {
   flex-direction: column;
 }
 
-.goal-repetitions {
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  margin-top: 30px;
+.goal-form-container label {
+  margin-bottom: 5px;
+}
+
+.goal-form-container input {
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.goal-add-submit {
+  background-color: #AFBBF4;
+  border: none;
+  transition: 0.4s ease;
+  border-radius: 25px;
+  padding: 7px;
+  padding-left: 12px;
+  padding-right: 12px;
+  cursor: pointer;
+  margin-top: -12px;
+}
+
+.goal-add-submit:hover {
+  background-color: #c9d1fb;
+}
+
+.goal-add-date {
+
 }
 
 .button-container {
   display: flex;
   justify-content: space-between;
-  padding-right: 10px;
-  padding-left: 10px;
-}
-
-.goal-text {
-  margin-top: -3px;
   margin-left: 10px;
+  margin-right: 10px;
 }
