--- a/client/src/app.css
+++ b/client/src/app.css
@@ -694,8 +694,8 @@ body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   flex-direction: column;
   align-items: center;
-  width: 400px;
-  height: 230px;
+  width: 550px;
+  height: 350px;
 }
 
 .single-goal-form-container h2 {
@@ -784,4 +784,14 @@ body {
   justify-content: space-between;
   margin-left: 10px;
   margin-right: 10px;
+}
+
+.goal-tasks-flex {
+  display: flex;
+  justify-content: space-between;
+}
+
+.goal-tasks ul {
+  height: 50px;
+  overflow-y: auto;
 }
