--- a/client/src/main.css
+++ b/client/src/main.css
@@ -15,7 +15,22 @@
     justify-content: center;
     align-items: center;
  }
+
  input {
     width: 250px;
     height: 40px;
+ }
+
+ .usertest-container {
+   margin: 30px;
+ }
+
+ .usertest-link {
+   text-decoration: none;
+   color: black;
+   transition: 0.4s ease;
+ }
+
+ .usertest-link:hover {
+   text-decoration: underline;
  }
